# Phishing-Quiz

./: .gitignore  Cargo.toml  Dockerfile  README.md  collected_emails.txt  valid_emails.txt
src/: db.rs  lib.rs  main.rs  state.rs  util.rs
src/entities/: htl_email.rs  user.rs
static/: index.html  index.js
static/hall-of-shame/: index.html
